--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,28 @@ talks
 papers
 change.log
 public_html.version
+
+examples/c1_0_c2_3/*.pdf                                                                                                                                             
+examples/c1_0_c2_3/*.html
+examples/c1_0_c2_3/*.txt
+examples/c1_0_c2_3/*.six
+examples/c1_0_c2_3/*Bib.xml
+examples/c1_0_c2_3/*Bib.xml.bib
+examples/c1_0_c2_3/*.aux
+examples/c1_0_c2_3/*.bbl
+examples/c1_0_c2_3/*.blg
+examples/c1_0_c2_3/*.brf
+examples/c1_0_c2_3/*.idx
+examples/c1_0_c2_3/*.ilg
+examples/c1_0_c2_3/*.ind
+examples/c1_0_c2_3/*.log
+examples/c1_0_c2_3/*.pnr
+examples/c1_0_c2_3/*.tex
+examples/c1_0_c2_3/*.toc
+examples/c1_0_c2_3/*.out
+examples/c1_0_c2_3/manual.lab
+
+
 doc/*.pdf
 doc/*.html
 doc/*.txt
